# feedback-vehicle-segmentation

./: CMakeLists.txt  Dockerfile  README.md  docker_run.sh  setup.py
python/: background_estimator.cpp  background_estimator.hpp  background_estimator.pyx  background_estimator_video.cpp  pointer.hpp  setup.py  test.py
src/: background_estimator_video.cpp  descriptor_zivkovic.hpp  threshold.hpp
src/include/: background_estimator.cpp  background_estimator.hpp  classifier.cpp  classifier.hpp  descriptor_zivkovic.hpp  filtering.cpp  filtering.hpp  threshold.cpp
tests/: segmentation_lima.py  test_on_cdw2012.sh  webcam.py
tests/cdw2012/: test_on_cdw2012.sh
